fix(ci): corregido los metodos inexistentes en la version de Java de CI